@@ -1,4 +1,5 @@
 0.7.1
+   - bug [9424] "Der bliver kastet en NullPointerException i DatadockMain loopet"
    - bug [9410] "Hudson failure i #103: FedoraAdministrationTest"
    - bug [9004] "new option to store xmles requests as itemorders"
    - bug [9406] "Hudson compile af unit test fejler after revision 5285"
